# countdown_numbers

./: .gitignore  Cargo.toml  README.md  README_flamegraph.md  README_instruments.md  check.sh  solve.sh  solve_all.sh  solve_wasm.sh  solve_wasm2.sh  stats-100-75-50-25-10-10-9-9-8-8-7-7-6-6-5-5-4-4-3-3-2-2-1-1.csv  stats-87-62-37-12-10-10-9-9-8-8-7-7-6-6-5-5-4-4-3-3-2-2-1-1.csv  stats.xlsx
cards/: Cargo.toml
cards/src/: lib.rs
numformat/: Cargo.toml
numformat/src/: lib.rs
programs/: Cargo.toml
programs/src/: duplicates.rs  generate.rs  infix.rs  lib.rs  op_tree.rs  progop.rs  program.rs  programs.rs
programs/src/programs/: duplicates.rs  generate.rs  mod.rs
solve/: Cargo.toml
solve/src/: main.rs
solve_all/: Cargo.toml
solve_all/src/: main.rs
solver/: Cargo.toml
solver/src/: lib.rs
solver/src/programs/: duplicates.rs  generate.rs  infix.rs  mod.rs  progop.rs  solution.rs
src/: main.rs  programs.rs
stats/: Cargo.toml
stats/src/: calc.rs  main.rs  results.rs  stats.rs
