[package]
name = "numformat"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
num-format = { version = "0.4.0", features = ["with-system-locale"] }
lazy_static = "1.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
