[package]
name = "programs"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
numformat = { path = "../numformat" }
itertools = "0.10.3"
colored = "2.0.0"
bitflags = "1.3.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
