[package]
name = "solve"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
numformat = { path = "../numformat" }
programs = { path = "../programs" }
bitflags = "1.3.2"
clap = { version = "3.2.20", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
