[package]
name = "solve"
version = "0.1.0"
description = "Solve a Countdown numbers game"
edition.workspace = true
authors.workspace = true

[dependencies]
numformat = { git = "https://github.com/andywarduk/numformat.git" }
solver = { path = "../solver" }
bitflags = "2.3.3"
clap = { version = "4.0.29", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
