[package]
name = "solver"
version = "0.1.0"
description = "Countdown numbers game solver"
edition.workspace = true
authors.workspace = true

[dependencies]
numformat = { git = "https://github.com/andywarduk/numformat.git" }
itertools = "0.12.0"
colored = "2.0.0"
bitflags = "2.3.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
